# db_practice

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
config/: BUILD.bazel  cors.go  dev.yml  test.yml
handlers/: BUILD.bazel  apiresponses.go  handler_test.go  users.go  users_test.go
internal/db/: BUILD.bazel  db.go  db_test.go  testclient.go  users_t.go  users_t_test.go
internal/users/: BUILD.bazel  testclient.go  users.go  users_test.go
migrations/: create_users_table.sql
