load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

filegroup(
    name = "env_file",
    srcs = [".env"],
)

gazelle(
    name = "gazelle",
)

go_binary(
    name = "Runner",
    embed = [":db_practice_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_library(
    name = "db_practice_lib",
    srcs = ["main.go"],
    importpath = "db_practice",
    visibility = ["//visibility:private"],
    deps = [
        "//config",
        "//handlers",
        "//internal/db",
        "//internal/users",
        "@com_github_gorilla_mux//:mux",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

genrule(
    name = "local_run",
    srcs = [
        ":db_practice_lib",
        ":env_file",
    ],
    outs = ["local_run.sh"],
    cmd = """
    echo '#!/bin/bash' > $@
    echo 'source $(location :env_file)' >> $@
    echo './$(location :db_practice_lib)' >> $@
    chmod +x $@
    """,
    visibility = ["//visibility:public"],
)
