load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handlers",
    srcs = [
        "apiresponses.go",
        "users.go",
    ],
    importpath = "db_practice/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/users",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "handlers_test",
    srcs = [
        "handler_test.go",
        "users_test.go",
    ],
    embed = [":handlers"],
    deps = [
        "//internal/users",
        "@com_github_gorilla_mux//:mux",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
