load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "testclient.go",
        "users_t.go",
    ],
    importpath = "db_practice/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_data_dog_go_txdb//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "db_test",
    srcs = [
        "db_test.go",
        "users_t_test.go",
    ],
    embed = [":db"],
    deps = [
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
